--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -2,41 +2,40 @@
     margin: 4rem 1rem 0;
     color: #3C3C3B;
 }
-
 .form-h2{
     font-size: 2rem;
 }
-
-.form-section label{
+.input-container-label, .label-budget{
     font-size: 1.3rem;
     margin-top: 1.5rem;
 }
-
-.form-section input[placeholder]{
+.form-section input {
     all: unset;
+}
+.form-section input{
     font-size: 1rem;
-    border-bottom: .0625rem solid ;
+    border-bottom: .0625rem solid;
     width: 100%;
     color: #868685;
-    padding: 0.3rem 0 .07rem ;
+    padding: 0.3rem 0 .07rem;
 }
-
 .form-section input[placeholder]::placeholder{
     color: #868685;
 }
-
-select:focus,select:active{
+select:focus, select:active{
     all: unset;
 }
-
-.form-section select{
+.form-container select{
     font-size: 1rem;
     border-bottom: .0625rem solid ;
     width: 100%;
     color: #868685;
-    padding: 0.3rem 0 .07rem ;
+    padding: 0.3rem 0 .07rem;
 }
-
+.form-container select option{
+    background-color: #F4F3EF;
+    outline: none;
+}
 .form-budget{
     margin-top: 0.5rem;
     display: flex;
@@ -44,31 +43,184 @@ select:focus,select:active{
     row-gap: .4rem;
     column-gap: .7rem;
 }
-
+input[type="radio"]:checked + label {
+    transition: .2s linear;
+    background: #E3E1EE;
+    color: #7874F4;
+    border-color: #7874F4;
+}
+.form-budget input[type="radio"] {
+    position: absolute;
+    width: 0;
+}
 .form-check{
-    margin: 1.5rem 0 0;
+    margin: 1.5rem 0 1rem;
     display: flex;
     gap: .8rem;
     align-items: center;
 }
-
 .form-check label{
     font-size: .75rem;
     transform: translateY(-20%);
+    height: 1.5rem;
+    max-width: 70%;
 }
-
-input[type="checkbox"] {
+.form-section input[type="checkbox"] {
     all: unset;
     padding: .5rem;
-    -webkit-appearance: none; 
-    -moz-appearance: none;    
     appearance: none;                    
     background-color: #EEEDF0;   
     border: 1px solid #000;   
     border-radius: 50%;       
     cursor: pointer;          
-  }
-
-  input[type="checkbox"]:checked {
+}
+.form-section input[type="checkbox"]:checked {
     background-color: #7874F4;
-  }
+}
+.form-btn-send{
+    margin-top: 2rem;
+}
+.legal-policity-form{
+    color: #7874F4;
+}
+@media(min-width:40rem){
+    .form-section{
+        width: 90%;
+    }
+    .form-h2{
+        font-size: 2.5rem;
+    }
+    .input-container-label, .label-budget{
+        font-size: 1.4rem;
+        margin-top: 1.7rem;
+    }
+    .form-section input[placeholder],
+    .form-section select {
+        font-size: 1.1rem;
+        padding: 0.5rem 0 .1rem;
+    }
+    .form-check label{
+        font-size: .9rem;
+        height: .9rem;
+        max-width: unset;
+    }
+}
+@media(min-width:56.25rem){
+    .form-section{
+        margin: 4rem 2.5rem;
+    }
+    .form-container{
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 1rem;
+        width: 100%;
+    }
+    .input-container{
+        margin: .7rem 0;
+        display: flex;
+        gap: 1rem;
+    }
+    .input-container-label, .label-budget{
+        text-wrap: nowrap;
+        font-size: 1.3rem;
+        margin-top: .5rem;
+    }
+    .form-section input, .form-section select{
+        width: 26vw;
+    }
+    .form-btn-budget{
+        padding: .15rem 1rem;
+        margin: 0;
+    }
+    .label-budget {
+        padding-top: .15rem;
+    }
+    .form-check{
+        padding-top: 1.5rem;
+    }
+    .form-check > label{
+        font-size: 1.2em;
+        height: 1.2rem;
+    }
+    .form-section input[placeholder]::placeholder{
+        font-size: 1.25rem;
+    }
+}
+@media(min-width:90rem){
+    .form-h2{
+        font-size: 3.43rem;
+        margin-bottom: 2rem;
+    }
+    .form-section{
+        margin: 4rem;
+        overflow-x: hidden;
+    }
+    .form-container{
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 1.5rem;
+        width: 100%;
+    }
+    .input-container{
+        margin: .7rem 0;
+        display: flex;
+        gap: 2.2rem;
+    }
+    .input-container-label, .label-budget{
+        font-size: 1.88rem;
+        margin-top: .5rem;
+    }
+    .form-section input, .form-section select{
+        width: 23vw;
+    }
+    .form-btn-budget{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: .15rem 1rem;
+        margin: 0;
+    }
+    .form-budget {
+        width: 60vw;
+    }
+    .label-budget {
+        padding-top: .15rem;
+    }
+    .form-check > label{
+        font-size: 1.2em;
+    }
+    .input-container-text > input{
+        width: 44.5vw;
+    }
+    .input-container input[type="email"]{
+        width: 25rem;
+        margin-right: 30vw;
+    }
+    .form-check{
+        gap: 1rem;
+    }
+}
+@media(min-width:120rem){
+    .form-section{
+        margin: 4rem;
+    }
+    .form-btn-budget{
+        padding: .35rem 1.3rem;
+        margin: 0;
+    }
+    .form-section input, .form-section select{
+        width: 32rem;
+    }
+    .input-container input[type="email"]{
+        width: 25rem;
+        margin-right: 30vw;
+    }
+    .input-container-text > input{
+        width: 49vw;
+    }
+}
+@media(min-width: 121rem){
+    .form-section{
+        margin: 4rem 0;
+    }
+}
