--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -2,34 +2,75 @@
     padding: .5rem 1.5625rem;
     border: .0625rem solid #7874F4;
     border-radius: 2rem;
-    transition: .2s linear;
+    cursor: pointer;
 }
-
-.button-main:hover{
-    background-color: #4e4b99;
-    color: aliceblue;
-    border-color: #ffffff00;
-}
-
-.hero-btn, .home-services-btn, .form-btn-send{
+.hero-btn, .home-services-btn, .form-btn-send, .why-gigson-btn{
     font-size: .875rem;
     color: #7874F4;
     margin: 1.3rem auto;
 }
-
-.home-services-btn{
-    margin: 2rem 0 0 1rem;
+.home-services-btn, .why-gigson-btn{
+    margin: 2rem 0 0;
 }
-
 .form-btn-budget{
     font-size: 1.25rem;
     padding: .4rem .9rem;
     color: #3C3C3B;
     border: .0625rem solid #000;
+    border-radius: 2rem;
+    cursor: pointer;
 }
-
+.form-btn-budget:hover{
+    transition: .2s linear;
+    background-color: #E3E1EE;
+    color: #7874F4;
+}
+.filters-btn{
+    font-size: .9rem;
+    padding: .3rem .8rem;
+    color: #3C3C3B;
+    border: .0625rem solid #3c3c3bbd;
+}
+.filter-btn-active{
+    transition: .2s linear;
+    background-color: #E3E1EE;
+    color: #7874F4;
+}
 .form-btn-send{
     margin: 1rem 0 1rem;
 }
-
-
+@media(min-width: 40rem){
+    .button-main{
+        padding: .65rem 2rem;
+    }
+    .hero-btn, .home-services-btn, .form-btn-send{
+        font-size: 1.1em;
+    }
+    .home-services-btn{
+        max-width: 20rem;
+    }
+    .button-main:hover{
+        transition: .2s linear;
+        background-color: #E3E1EE;
+        color: #7874F4;
+    }
+    .filters-btn{
+        font-size: 1em;
+        padding: .4rem 1.2rem;
+    }
+}
+@media(min-width: 56.25rem){
+    .button-main{
+        padding: .7rem 2.2rem;
+    }
+    .hero-btn, .home-services-btn, .form-btn-send{
+        font-size: 1.1em;
+    }
+    .form-btn-send{
+        margin: .5rem 0 1rem;
+    }
+    .filters-btn{
+        font-size: 1em;
+        padding: .45rem 1.5rem;
+    }
+}
