--- a/src/components/Home/HomeServices.css
+++ b/src/components/Home/HomeServices.css
@@ -1,39 +1,202 @@
 .home-services{
-
     overflow: hidden;
+    /* padding: 0 1rem; */
+    position: relative;
 }
-
+.home-services-bg{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: -2rem;
+    z-index: -1;
+    background: url('../../assets/homeServicesBg.svg') no-repeat;
+    background-position: 0 100%;
+    background-size: cover;
+}
+.home-services-bg:before{
+    content: '';
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    background: linear-gradient(0deg, #F4F3EF 0%, #ffffff00 100%);
+}
 .home-services-img{
     width: 100vw;
     height: 22rem;
+    max-width: 37.5rem;
+    min-height: 20rem;
     object-fit: cover;
     text-align: center;
     opacity: 0.4;
-    margin-left: 1rem;
+}
+.home-text-container {
+    display: flex;
+  }
+
+.services-h2-animation{
+    white-space: nowrap;
+    padding: 1rem;
+    animation: scrollLeft 4s linear infinite;
 }
 
-.home-services-h2{
-    font-size: 1.875rem;
+.home-services-h2 {
+    font-size: clamp(1.875em,7vw,4.4em);
+    color: #fff;
     text-wrap: nowrap;
-    margin: 2.7rem 1rem 0;
-    color: white;
-    animation: home-services-h2-animation both 5s infinite;    
 }
-
-@keyframes home-services-h2-animation{
-    100%{
-        transform: translateX(-35%);
+@keyframes scrollLeft {
+    100% {
+      transform: translateX(-100%);
     }
-}
-
+  }
 .home-services-h2 span{
-    color: #7874f4;
+    color: #B6B4F6;
 }
-
 .home-services-p{
-    font-size: 1.25rem;
-    padding: 16px 0 0 1rem;
+    font-size: 1.25em;
+    padding-top: 1rem;
     line-height: 1.625rem;
     color: #3C3C3B;
     text-wrap: balance;
+    max-width: 30rem;
+}
+.home-services-info{
+    padding: 0 1rem;
+}
+
+.home-services > .why-gigson{
+    margin-bottom: 0;
+}
+@media (min-width: 40rem) {
+    .ctaHomeServicesContainer{
+        margin: 3rem 1.7rem 0;
+        padding: 0 1.3rem;
+    }
+    .ctaHomeServices{
+        display: flex;
+        padding: 1.8rem 1rem;
+        background-color: #E3E1EE;
+        border-radius: 1.5rem;
+        gap: 6rem;
+    }
+    
+    .cta-h2{
+        margin: .5rem .3rem;
+        font-size: 2em;
+        text-wrap: balance;
+        max-width: 16rem;
+    }
+    
+    .cta-p{
+        font-size: 1.25em;
+        margin: 1rem .3rem;
+    }
+    
+    .cta-hero-btn{
+        color: #7874F4;
+        margin: 1rem .3rem;
+    }
+    .home-services-info{
+        display: flex;
+        flex-direction: column;
+    }
+    .home-services-img{
+        align-self: center;
+        margin-left: 4rem;
+    }
+    .home-services-p{
+        font-size: 1.35em;
+        line-height: 1.725rem;
+        padding-top: 2rem;
+    }
+    .home-services-bg{
+        background-position: 0 50%;
+    }
+    .home-services-btn {
+        margin-top: 3rem;
+    }
+}
+@media(min-width:56.25rem){
+    .home-services-info{
+        padding: 0 2.5rem;
+    }
+    .home-services-h2{
+        font-size: 4em;
+    }
+    .home-services-info{
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .home-services-img{
+        max-width: 40rem;
+        width: 70vw;
+        height: 90%;
+        margin: 0;
+    }
+    .home-services-p{
+        max-width: 35rem;
+    }
+    .home-services-bg{
+        background-position: 0 10%;
+    }
+}
+@media(min-width: 90rem){
+    .home-services-info{
+        padding: 0 4rem;
+    }
+    /* .home-services-h2{
+        font-size: 4.5em;
+    } */
+    .home-services-p{
+        font-size: 1.875em;
+        line-height: 2.23rem;
+        max-width: 40rem;
+    }
+    .home-services-text > button{
+       margin-top: 4rem;
+    }
+    .home-services-img{
+        max-width: 45rem;
+        width: 70vw;
+        height: 70%;
+        margin: 0;
+    }
+    .home-services-bg{
+        background-position: 0 10%;
+    }
+    .home-services-p{
+        font-size: 1.875rem;
+        line-height: 2rem;
+        max-width: 40rem;
+    }
+    .home-services-btn {
+        margin-top: 4rem;
+    }
+}
+@media(min-width: 110rem){
+    .home-services-p{
+        position: relative;
+        left: -2rem;
+        z-index: 1;
+        font-size: 1.875rem;
+        line-height: 2rem;
+        max-width: 48rem;
+    }
+    .home-services-btn {
+        position: relative;
+        left: -2rem;
+        z-index: 1;
+    }
+    .home-services-img{
+        max-width: 55rem;
+        width: 90vw;
+        height: 60%;
+        margin-left: 8rem;
+    }
+    .home-services-p{
+        font-size: 2em;
+        line-height: 2.3rem;
+    }
 }
