--- a/src/components/Accordion/Accordion.css
+++ b/src/components/Accordion/Accordion.css
@@ -1,13 +1,11 @@
 .accordion-container{
+    max-width: 105rem;
     margin: 0 1rem;
     padding-bottom: 1rem;
     border: 1px solid #7874F4;
     border-radius: 1.25rem;
     text-wrap: balance;
     cursor: pointer;
-    max-width: 120rem;
-    max-height: 120rem;
-    margin: auto;
 }
 .accordion-btn{
     width: 100%;
@@ -21,48 +19,51 @@
     cursor: pointer;
 }
 .accordion-title{
-    font-size: 1.5em;
+    font-size: 1.875rem;
     max-width: 90%;
 }
 .accordion-content{
-    display: grid;
-    grid-template-rows: 0;
-    opacity: 0;
+    height: 0;
     font-size: .9em;
     color: #3b3b3b;
     padding: 0 1rem;
     overflow: hidden;
-    transition: all 200ms ease-out;
+    opacity: 0;
+    transition: 350ms ease-in-out;
+    
 }
 .accordion-show-content{
     margin-top: 1rem;
-    grid-template-rows: 1fr;
+    min-height: 2rem;
+    height: fit-content;
     opacity: 1;
 }
 .accordion-content-text{
+    font-size: 1.125rem;
     overflow-y: hidden;
 }
 .cases-dropdown-subtitle{
     font-size: 1.25em;
     color: #3b3b3b;
-    padding: 1rem 0 1.5rem;
+    padding: 1rem 0 .5rem;
     border-top: 1px solid;
 }
 .cases-dropdown-challenge{
+    max-width: 55rem;
     padding: 1rem 0 2rem;
-    border-top: 1px solid #3C3C3B;
     color: #868685;
 }
 .without-border{
-    padding: 0 0 3rem;
+    padding: 0 0 2rem;
     border-top: none;
 }
-.cases-dropdown-features {
-    padding-bottom: 1rem;
+.oadljkgvbadojgbaed {
+    padding: 1rem 0;
     border-bottom: 1px solid #868685;
+    border-top: 1px solid #868685;
 }
 .cases-dropdown-features > h4, 
-.cases-dropdown-solution > h4{
+.cases-dropdown-solution h4{
     color: #7874F4;
     text-transform: uppercase;
     padding-bottom: .5rem;
@@ -86,8 +87,56 @@
     padding: 1rem 0;
     color: #868685;
 }
+.cases-dropdown-solution p  {
+    max-width: 55rem;
+}
 .accordion-svg{
     flex-shrink: 0;
     margin-left: .5rem;
-    transition: 500ms ease-out;
+    width: 1.5rem;
+    height: 1.5rem;
+}
+@media (min-width: 64rem) {
+    .accordion-container{
+        margin: 0 4rem;
+    }
+    .oadljkgvbadojgbaed, .cases-dropdown-solution, .without-border{
+        max-width: none;
+        display: grid;
+        grid-template-columns: calc(70% - 1rem) 30%;
+        gap: 1rem;
+    }
+    .cases-dropdown-solution p, .cases-dropdown-challenge {
+        font-size: 1.1em;
+    }
+}
+@media (min-width: 90rem){
+    .accordion-container{
+        padding: .5rem 2rem 1.5rem;
+    }
+    .accordion-title{
+        font-size: 1.7em;
+    }
+    .cases-dropdown-solution h4, .cases-dropdown-features h4 {
+        font-size: 1.3rem;
+    }
+    .cases-dropdown-solution p, .cases-dropdown-challenge {
+        max-width: 70rem;
+        font-size: 1.2em;
+    }
+    .cases-dropdown-features, .cases-dropdown-tools{
+        font-size: 1.2em;
+    }
+    .cases-dropdown-subtitle{
+        font-size: 1.4em;
+    }
+    .accordion-svg{
+        width: 2rem;
+        height: 2rem;
+    }
+}
+@media (min-width: 121rem) {
+    .accordion-container{
+        margin: 0 auto;
+    }
 }
