--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,14 +1,6 @@
 .header{
-    position: fixed;
-    width: 100%;
-    top: 0;
-    background-color: #F4F3EF;
-    z-index: 1;    
-}
-
-.div-header{
-    margin: 0 1rem;
-    padding: 2rem 0 1rem;
+    margin: 2rem 1rem ;
+    padding: 0 0 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -25,8 +17,9 @@
     width: 8.5rem;
 }
 
+
+
 #menu__toggle {
-    display: none;
     opacity: 0;
 }
 
@@ -49,8 +42,13 @@
 .menu__btn {
     display: flex;
     align-items: center;
-    position: relative;
-    width: 1.625rem;
+    position: fixed;
+    top: 40px;
+    right: 25px;
+
+    width: 26px;
+    height: 26px;
+
     cursor: pointer;
     z-index: 1;
 }
@@ -79,28 +77,34 @@
 
 .menu__box {
     text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 2rem;
-    font-size: 1.5rem;
+    display: block;
     position: fixed;
+    visibility: hidden;
     top: 0;
     right: -100%;
-    width: 100%;
-    height: 100%;
+
+    width: 80%;
+    height: 50%;
+
     margin: 0;
     padding: 80px 0;
+
+    list-style: none;
+
     background-color: #F4F3EF;
     box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+
     transition-duration: .45s;
 }
 
 .menu__item {
     display: block;
     padding: 12px 24px;
+
     color: #333;
+
+    text-decoration: none;
+
     transition-duration: .25s;
 }
 
@@ -109,15 +113,10 @@
 }
 
 @media(min-width:900px){
-    .menu__btn{        
+    .hamburger-menu{        
         display: none;
     }
     .nav-links{
-        all: unset;
-        display: flex;
-    }
-    .menu__box{
-        all: unset;
         display: flex;
     } 
 }
