--- a/src/components/About/AboutHero.css
+++ b/src/components/About/AboutHero.css
@@ -13,7 +13,7 @@
     height: 100%;
     width: 100%;
     position: absolute;
-    top: 4rem;
+    top: 5rem;
     z-index: -1;
     background: url('../../assets/aboutBg.svg') no-repeat;
     background-size: contain;
@@ -32,7 +32,7 @@
     padding: 2rem 1rem 2.5rem;
 }
 .div-svg-about{
-    border-bottom: 1px solid #3c3c3b93;
+    border-bottom: 1px solid #27272193;
     padding: 2rem 0 .5rem;
 }
 .svg-about-circ{
@@ -50,7 +50,7 @@
     font-size: 2.25rem;
     color: #3c3c3b;
     line-height: 2.375rem;
-    padding: 0 1.5rem;    
+    padding: 3rem 0 0;    
 }
 .about-hero-h1 > span, .about-hero-need-h2 > span{
     color: #7874F4;
@@ -76,8 +76,7 @@
     font-size: 1rem;
     color: #868685;
     line-height: 1.375rem;
-    padding: 1rem 2rem 0;
-    text-wrap: balance;
+    padding: 1rem 1.3rem 0;
 }
 .about-believe-p{
     color: #868685;
@@ -138,8 +137,10 @@
         margin-top: 9rem;
     }
     .about-hero-h1{
+        max-width: 38rem;
         font-size: 2.7em;
         line-height: 2.8rem;
+        margin-bottom: 1.5rem;
     }
     .about-hero-p{
         font-size: 1.25em;
