--- a/src/components/Home/CtaServices.css
+++ b/src/components/Home/CtaServices.css
@@ -96,13 +96,13 @@
         display: block;
         position: relative;
         margin-top: 1rem;
-        max-width: 35rem;
+        max-width: 54rem;
         margin-left: auto;
         margin-right: auto;
     }
     .cta-button-container > h2{
         color: #F4F3EF;
-        font-size: 3.5em;
+        font-size: 3.4rem;
         margin-bottom: 1rem;
     }
     .cta-why-gigson{
