--- a/src/components/Pages/Faqs/Faqs.css
+++ b/src/components/Pages/Faqs/Faqs.css
@@ -5,7 +5,7 @@
 }
 .hero-faqs{
     text-align: center;
-    margin: 10rem 1rem 5rem;
+    margin: 10rem 1rem 4rem;
     padding: 6rem 0;
     overflow: hidden;
 }
@@ -32,10 +32,10 @@
     object-fit: contain;
 }
 .hero-faqs-h1{
-    max-width: 14rem;
+    max-width: 17rem;
     margin: 0 auto;
-    font-size: 2em;
-    line-height: 2.4rem;
+    font-size: 2.575rem;
+    line-height: 3.5rem;
     padding-top: .3rem;
     color: #3C3C3B;
     text-wrap: pretty;
@@ -75,6 +75,23 @@
 
 
 @media (min-width: 70rem) {
+
+    .hero-faqs{
+        text-align: center;
+        margin: 10rem 1rem 5rem;
+        padding: 6rem 0;
+        overflow: hidden;
+    }
+
+    .hero-faqs-h1{
+        max-width: 22rem;
+        margin: 0 auto;
+        font-size: 3.375rem;
+        line-height: 3.5rem;
+        padding-top: .3rem;
+        color: #3C3C3B;
+        text-wrap: pretty;
+    }
     .faqs-accordion{
         display: grid;
         grid-template-columns: 1fr 3fr;
