--- a/src/components/About/AboutHero.css
+++ b/src/components/About/AboutHero.css
@@ -8,17 +8,26 @@
     overflow: hidden;
     position: relative;
 }
+
+.div-button-about-svg{
+    position: relative;
+    top: -13rem;
+    text-align: center;
+}
+
 .about-bg{
     margin: 0 auto;
-    height: 100%;
-    width: 100%;
+    height: 140%;
+    width: 140%;
     position: absolute;
-    top: 5rem;
+    top: 3rem;
+    left: -4rem;
     z-index: -1;
     background: url('../../assets/aboutBg.svg') no-repeat;
     background-size: contain;
     background-position: 50% 0;
 }
+
 .about-bg:before{
     content: '';
     height: 100%;
@@ -44,18 +53,19 @@
 }
 .about-hero-h1{
     margin: 0 auto;
-    max-width: 30rem;
+    max-width: 22rem;
     font-size: 1.5em;
     text-align: center;
-    font-size: 2.25rem;
     color: #3c3c3b;
-    line-height: 2.375rem;
-    padding: 3rem 0 0;    
+    line-height: 1.875rem;
+    padding: 2rem 0 0;    
 }
 .about-hero-h1 > span, .about-hero-need-h2 > span{
     color: #7874F4;
 }
+
 .about-span{
+    color:#3C3C3B;
     font-size: 1.25rem;
     margin: 0 .2rem;
 }
@@ -87,8 +97,13 @@
 .about-hero-btn {
     font-size: .875rem;
     color: #7874F4;
-    margin: 8.3rem auto 0;
+    margin-top: 4.3rem;
+    margin-bottom: 5rem;
 }
+.div-button-about{
+    text-align: center;
+}
+
 .about-hero-need-h2{
     margin: 5.5rem 0 1rem;
     font-size: 2rem;
@@ -98,6 +113,8 @@
     font-size: 1rem;
     margin: 1rem 0 3rem;
 }
+
+
 .about-div-specialist {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -105,6 +122,7 @@
     margin-bottom: 1.5rem;
     padding: 1rem 0;
 }
+
 .about-need-h3{
     font-size: 1rem;
     color: #3C3C3B;
@@ -132,6 +150,29 @@
     opacity: .6;
 }
 @media (min-width: 56.25rem){
+
+    .div-button-about-svg{
+        position: relative;
+        top: -6rem;
+        text-align: center;
+    }
+    .div-button-about{
+        margin: auto;
+        text-align: center;
+    }
+    
+    .about-bg{
+        margin: 0 auto;
+        height: 140%;
+        width: 100%;
+        position: absolute;
+        top: 5rem;
+        left: 0rem;
+        z-index: -1;
+        background: url('../../assets/aboutBg.svg') no-repeat;
+        background-size: contain;
+        background-position: 50% 0;
+    }
     .div-about-hero{
         height: calc(100vh - 9rem);
         margin-top: 9rem;
@@ -198,7 +239,7 @@
         margin: 3.5rem auto 0;
     }
     .about-bg{
-        top: 2rem;
+        top: 4rem;
         height: 90%;
     }
     .about-bg:before{
