--- a/src/components/Home/CtaServices.css
+++ b/src/components/Home/CtaServices.css
@@ -103,6 +103,7 @@
     .cta-button-container > h2{
         color: #F4F3EF;
         font-size: 3.4rem;
+        font-weight: 300;
         margin-bottom: 1rem;
     }
     .cta-why-gigson{
