--- a/src/components/Home/Homecases.css
+++ b/src/components/Home/Homecases.css
@@ -77,6 +77,7 @@
     gap: .1rem;
     border-top: 1px solid #3c3c3b92;;
     padding: .5rem 0 2rem;
+    margin-bottom: 1rem;
 }
 .services-cards-span{
     color: #7874F4;
