Corregir toda la capacidad de respuesta de la página de inicio.

--- a/src/components/Home/Hero.css
+++ b/src/components/Home/Hero.css
@@ -1,207 +1,247 @@
-.hero-section{
-    overflow: hidden;
-    height: 100vh;
-    width: 100%;
+.hero-section {
+   overflow: hidden;
+   height: 100vh;
+   width: 100%;
 }
-.hero-img{
-    position: relative;
-    top: 4.5rem;
-    right: -2.5rem;
-    width: 100%;
-    height: 52%;
-    max-height: 32rem;
-    min-height: 22rem;
-    object-fit: contain;
+.hero-img {
+   position: relative;
+   top: 4.5rem;
+   right: -2.5rem;
+   width: 100%;
+   height: 52%;
+   max-height: 32rem;
+   min-height: 22rem;
+   object-fit: contain;
 }
 .hero-top-content {
-    display: flex;
-    flex-direction: column;
+   display: flex;
+   flex-direction: column;
 }
-.hero-text{
-    text-align: center;
-    position: relative;
-    top: 3.5rem;
+.hero-text {
+   text-align: center;
+   position: relative;
+   top: 3.5rem;
 }
-.hero-p{
-    font-size: 0.875rem;
-    text-align: center;
-    color: #868685;
-    line-height: 1.375rem;
+.hero-p {
+   font-size: 0.875rem;
+   text-align: center;
+   color: #868685;
+   line-height: 1.375rem;
 }
-.hero-h1{
-    margin: .4rem 0;
-    font-size: 2em;
-    line-height: 2.375rem;
-    color: #3c3c3b;
-    text-align: center;
-    text-wrap: balance;
+.hero-h1 {
+   margin: 0.4rem 0;
+   font-size: 2em;
+   line-height: 2.375rem;
+   color: #3c3c3b;
+   text-align: center;
+   text-wrap: balance;
 }
-.hero-h1 span{
-    color: #7874f4;
+.hero-h1 span {
+   color: #7874f4;
 }
-.hero-godown{
-    position: absolute;
-    width: 100%;
-    text-align: center;
-    left: 0;
-    bottom: 1rem;
-    font-size: .9em;
+.hero-godown {
+   position: absolute;
+   width: 100%;
+   text-align: center;
+   left: 0;
+   bottom: 1rem;
+   font-size: 0.9em;
 }
-.hero-godown{
-    color: #7874f4;
+.hero-godown {
+   color: #7874f4;
 }
-.icon-godown{
-    margin-top: .45rem;
-    fill: none;
-    height: .375rem;
+.icon-godown {
+   margin-top: 0.45rem;
+   fill: none;
+   height: 0.375rem;
 }
 @media (min-width: 24.375rem) {
-    .hero-img{
-        top: 5.5rem;
-        right: -3rem;
-        height: 60%;
-        max-height: 23rem;
-    }
-    .hero-text{
-        top: 4rem;
-        padding: 1.5rem 2rem 0;
-    }
-    .hero-h1{
-        font-size: 2.25em;
-        margin: .8rem 0;
-    }
-    .hero-godown{
-        font-size: 1em;
-        bottom: 1.5rem;
-    }
+   .hero-img {
+      top: 5.5rem;
+      right: -3rem;
+      height: 60%;
+      max-height: 23rem;
+   }
+   .hero-text {
+      top: 4rem;
+      padding: 1.5rem 2rem 0;
+   }
+   .hero-h1 {
+      font-size: 2.25em;
+      margin: 0.8rem 0;
+   }
+   .hero-godown {
+      font-size: 1em;
+      bottom: 1.5rem;
+   }
 }
 @media (min-width: 40rem) {
-    .hero-img{
-        top: 5.5rem;
-        right: -5rem;
-    }
-    .hero-text{
-        top: 5rem;
-        padding: 1.5rem 2rem 0;
-    }
-    .hero-p{
-        font-size: 1.05rem;
-        text-align: center;
-        color: #868685;
-        line-height: 1.375rem;
-    }
-    .hero-h1{
-        font-size: 3.2em;
-        line-height: 3.35rem;
-        margin-bottom: 2.5rem;
-    }
-    .hero-godown{
-        font-size: 1.1em;
-        bottom: 1.2rem;
-    }
-    .hero-btn{
-        position: relative;
-        z-index: 1;
-    }
+   .hero-img {
+      top: 5.5rem;
+      right: -5rem;
+   }
+   .hero-text {
+      top: 5rem;
+      padding: 1.5rem 2rem 0;
+   }
+   .hero-p {
+      font-size: 1.05rem;
+      text-align: center;
+      color: #868685;
+      line-height: 1.375rem;
+   }
+   .hero-h1 {
+      font-size: 3.2em;
+      line-height: 3.35rem;
+      margin-bottom: 2.5rem;
+   }
+   .hero-godown {
+      font-size: 1.1em;
+      bottom: 1.2rem;
+      padding: 0 4rem 2.2rem 0;
+   }
+   .hero-btn {
+      position: relative;
+      z-index: 1;
+   }
 }
 @media (min-width: 56.25rem) {
-    .hero-section{
-        margin-right: 2rem;
-    }
-    .hero-top-content{
-        height: 90%;
-        justify-content: flex-start;
-    }
-    .hero-img{
-        align-self: flex-end;
-        order: 2;
-        right: -6rem;
-        min-height: unset;
-        max-width: 35rem;
-        max-height: unset;
-        width: 62%;
-        height: 75%;
-    }
-    .hero-godown{
-        display: flex;
-        justify-content: flex-end;
-        order: 2;
-        gap: 1rem;
-        padding: 0 2rem 2.2rem 0; 
-        bottom: 5%;
-    }
-    .hero-godown-a{
-        order: 2;
-    }
-    .icon-godown{
-        order: 1;
-        width: 1.25rem;
-        fill: none;
-    }
-    .hero-text{
-        text-align: left;
-        position: absolute;
-        top: unset;
-        bottom: 7%;
-        padding: 1.5rem 2.5rem 0;
-    }
-    .hero-h1, .hero-p{
-        width: 100%;
-        text-align: left;
-    }
-    .hero-h1{
-        max-width: 40rem;
-        font-size: 4.5em;
-        line-height: 4.8rem;
-    }
+   .hero-section {
+      margin-right: 2rem;
+      padding-inline: 4rem;
+   }
+   .hero-top-content {
+      height: 90%;
+      justify-content: flex-start;
+   }
+   .hero-img {
+      align-self: flex-end;
+      order: 2;
+      right: -6rem;
+      min-height: unset;
+      max-width: 35rem;
+      max-height: unset;
+      width: 62%;
+      height: 75%;
+   }
+   .hero-godown {
+      display: flex;
+      justify-content: flex-end;
+      order: 2;
+      gap: 1rem;
+      bottom: 5%;
+   }
+   .hero-godown-a {
+      order: 2;
+   }
+   .icon-godown {
+      order: 1;
+      width: 1.25rem;
+      fill: none;
+   }
+   .hero-text {
+      text-align: left;
+      position: absolute;
+      top: unset;
+      bottom: 7%;
+      padding: 1.5rem 2.5rem 0;
+   }
+   .hero-h1,
+   .hero-p {
+      width: 100%;
+      text-align: left;
+   }
+   .hero-h1 {
+      max-width: 40rem;
+      font-size: 4.5em;
+      line-height: 4.8rem;
+   }
 }
 @media (min-width: 70rem) {
-    .hero-h1{
-        max-width: 45rem;
-        font-size: 5em;
-        line-height: 5.3rem;
-    }
-    .hero-img{
-        max-width: unset;
-        width: 57%;
-        height: 67%;
-        margin-top: 0;
-        right: -5rem;
-        top: 7.4rem;
-    }
-    .hero-text{
-        bottom: 10%;
-        padding: 1.5rem 4rem 0;
-    }
-    .hero-godown{
-        padding: 0 2rem 1.3rem 0; 
-        bottom: 10%;
-    }
+   .hero-h1 {
+      max-width: 45rem;
+      font-size: 5em;
+      line-height: 5.3rem;
+   }
+   .hero-img {
+      max-width: unset;
+      width: 57%;
+      height: 67%;
+      margin-top: 0;
+      right: -5rem;
+      top: 7.4rem;
+   }
+   .hero-text {
+      bottom: 10%;
+      padding: 1.5rem 4rem 0;
+   }
+   .hero-godown {
+      padding: 0 6rem 1.3rem 0;
+      bottom: 10%;
+   }
 }
 @media (min-width: 115rem) {
-    .hero-h1{
-        max-width: 70rem;
-        font-size: 5.6em;
-        line-height:6rem;
-    }
-    .hero-img{
-        max-height: unset;
-        width: 50%;
-        height: 70%;
-        margin-top: 0;
-    }
-    .hero-text{
-        bottom: 13%;
-    }
-    .hero-godown{
-        padding: 0 2rem 1.3rem 0; 
-        bottom: 13%;
-    }
+   .hero-h1 {
+      max-width: 70rem;
+      font-size: 5.6em;
+      line-height: 6rem;
+   }
+   .hero-img {
+      max-height: unset;
+      width: 50%;
+      height: 70%;
+      margin-top: 0;
+   }
+   .hero-text {
+      bottom: 13%;
+   }
+   .hero-godown {
+      bottom: 13%;
+   }
 }
 
-@media(min-width:125rem){
-    .hero-godown{
-        padding-right: 0;
-        max-width: 115rem;
-    }
+@media (min-width: 125rem) {
+   .hero-godown {
+      max-width: 115rem;
+   }
+}
+
+@media screen and (max-width: 1100px) {
+   .hero-section {
+      padding-inline: 3rem;
+   }
+}
+
+@media screen and (max-width: 898px) {
+   .hero-godown {
+      padding: 0;
+   }
+}
+
+@media screen and (max-width: 600px) {
+   .hero-img {
+      width: auto;
+      height: 330px;
+      min-height: auto;
+   }
+
+   .hero-section {
+      padding-inline: 0;
+   }
+}
+
+@media screen and (max-width: 450px) {
+   .hero-img {
+      height: 280px;
+   }
+
+   .hero-text {
+      top: 4rem;
+   }
+}
+
+@media screen and (max-width: 350px) {
+   .hero-img {
+      height: 230px;
+   }
 }
