--- a/src/components/Home/HomeServices.css
+++ b/src/components/Home/HomeServices.css
@@ -22,15 +22,7 @@
    top: 0;
    background: linear-gradient(0deg, #f4f3ef 0%, #ffffff00 100%);
 }
-.home-services-img {
-   width: 100vw;
-   height: 22rem;
-   max-width: 37.5rem;
-   min-height: 20rem;
-   object-fit: cover;
-   text-align: center;
-   opacity: 0.4;
-}
+
 .home-text-container {
    display: flex;
 }
@@ -51,6 +43,8 @@
    font-size: clamp(2.875em, 7vw, 4.4em);
    color: #fff;
    text-wrap: nowrap;
+   text-shadow: 0 0 2px black;
+
 }
 
 @keyframes scrollLeft {
@@ -69,20 +63,25 @@
    text-wrap: balance;
    max-width: 30rem;
 }
-.home-services-info {
-   padding: 0 1rem;
+
+.home-services-img {
+   align-self: flex-start;
+   object-fit: cover;
 }
+
+.home-services-info {
+   max-width: 1400px;
+   margin-inline: auto;
+}
+
 @media (min-width: 40rem) {
    .home-services-info {
       display: flex;
       flex-direction: column;
    }
-   .home-services-img {
-      align-self: center;
-      margin-left: 4rem;
-   }
+
    .home-services-p {
-      font-size: 1.35em;
+      font-size: 1.65em;
       line-height: 1.725rem;
       padding-top: 2rem;
    }
@@ -94,9 +93,6 @@
    }
 }
 @media (min-width: 56.25rem) {
-   .home-services-info {
-      padding: 0 2.5rem;
-   }
    .home-services-h2 {
       margin-top: 2rem;
       font-size: 4em;
@@ -106,12 +102,7 @@
       justify-content: space-between;
       align-items: center;
    }
-   .home-services-img {
-      max-width: 40rem;
-      width: 70vw;
-      height: 90%;
-      margin: 0;
-   }
+
    .home-services-p {
       max-width: 35rem;
    }
@@ -120,9 +111,6 @@
    }
 }
 @media (min-width: 90rem) {
-   .home-services-info {
-      padding: 0 4rem;
-   }
    .home-services-p {
       font-size: 1.875em;
       line-height: 2.23rem;
@@ -131,12 +119,7 @@
    .home-services-text > button {
       margin-top: 4rem;
    }
-   .home-services-img {
-      max-width: 45rem;
-      width: 70vw;
-      height: 70%;
-      margin: 0;
-   }
+
    .home-services-bg {
       background-position: 0 10%;
    }
@@ -163,14 +146,75 @@
       left: -2rem;
       z-index: 1;
    }
-   .home-services-img {
-      max-width: 55rem;
-      width: 90vw;
-      height: 60%;
-      margin-left: 8rem;
-   }
+
    .home-services-p {
       font-size: 2em;
       line-height: 2.3rem;
+   }
+}
+
+@media screen and (max-width: 1500px) {
+   .home-services-img {
+      width: 50%;
+   }
+}
+
+@media screen and (max-width: 1440px) {
+   .home-services-info {
+      padding-inline: 3rem;
+      padding-bottom: 1rem;
+   }
+}
+
+@media screen and (max-width: 1100px) {
+   .home-text-container {
+      padding-top: 7rem;
+   }
+   .home-services-info {
+      padding-bottom: 2rem;
+   }
+
+   .home-services-img {
+      width: 60%;
+   }
+
+   .home-services-bg {
+      top: -4rem;
+   }
+
+   .home-services-p {
+      font-size: 1.3em;
+   }
+}
+
+@media screen and (max-width: 897px) {
+   .home-services-img {
+      width: 60%;
+      margin-block: -5rem;
+   }
+   .home-services-p {
+      max-width: 100%;
+      text-wrap: initial;
+   }
+
+   .home-services-btn {
+      font-size: 1.1rem;
+   }
+}
+
+@media screen and (max-width: 640px) {
+   .home-services-img {
+      margin-block: -3rem;
+   }
+
+   .home-text-container {
+      padding-top: 3rem;
+   }
+}
+
+@media screen and (max-width: 450px) {
+   .home-services-img {
+      width: 70%;
+      margin-bottom: -2rem;
    }
 }
